--- a/public/sass/mixins/_buttons.scss
+++ b/public/sass/mixins/_buttons.scss
@@ -16,3 +16,9 @@
 }
 
 
+// Button sizes
+@mixin button-size($padding-y, $padding-x, $font-size, $border-radius) {
+  padding: $padding-y $padding-x;
+  font-size: $font-size;
+  @include border-radius($border-radius);
+}
